name:                race
version:             0.1.0.0
synopsis:            Run commands in parallel wil colorized output
description:         Please see README.md
homepage:            http://github.com/lubomir/race#readme
license:             BSD3
license-file:        LICENSE
author:              Lubomír Sedlář
maintainer:          lubomir.sedlar@gmail.com
copyright:           2016 Lubomír Sedlář
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable race
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , async
                     , conduit
                     , conduit-extra
                     , bytestring
                     , unix
  ghc-options:         -Wall -threaded
